Ditch use of .toLegacy() in bgp extension tests
We now have DataObjectReference.firstKeyOf(), use that instead of legacy
conversion.

Change-Id: I70afd6081ddf4168871546d299b655e0addd5915
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>